force-app/main/default/objects/Contact/fields/Experience_User__c.field-meta.xml
<CustomField>
    <fullName>Experience_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Experience User</label>
    <type>Checkbox</type>
</CustomField>