force-app/main/default/objects/Contact/fields/FIN_Active__c.field-meta.xml
<CustomField>
    <fullName>FIN_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>