force-app/main/default/objects/Contact/fields/FIN_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>FIN_Portal_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>