force-app/main/default/objects/Contact/recordTypes/FIN_Contact.recordType-meta.xml
<RecordType>
    <fullName>FIN_Contact</fullName>
    <active>true</active>
    <label>Financial Contact</label>
</RecordType>